--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "pacemaker"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
+[[test]]
+name = "integration"
 harness = false
 
 [dependencies]
@@ -19,4 +20,4 @@ xmc4-hal = { version = "0.5.5", features = ["xmc4700"]}
 critical-section = "1.1.2"
 
 [dev-dependencies]
-defmt-test = "0.3"
+defmt-test = "0.3.2"
