--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pacemaker"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [lib]
 harness = false
@@ -20,3 +21,6 @@ critical-section = "1.1.2"
 
 [dev-dependencies]
 defmt-test = "0.3"
+
+[build-dependencies]
+bindgen = "0.70.1"
