feat: update to latest mantra & emb-runner versions

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,3 +14,4 @@ target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)
 
 [env]
 DEFMT_LOG="info"
+#RUSTFLAGS="-Cinstrument-coverage -Zno-profiler-runtime"
